style.css
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Crimson+Pro:ital,wght@0,200..900;1,200..900');

html {
  background: #aaa;
}

body {
  width: 40em;
  margin: 1em auto;
  height: 100%;
  font-family: "Crimson Pro", serif;
  font-size: 18px;
  line-height: 1.8;
  padding: 1em 2em;
  color: #222;
  background: #ccd;
  border-radius: 0.5em;
}

h1, h2, h3 {
  font-family: "DM Sans";
  font-weight: 300;
}

h1 { font-size: 1.8em; }
h2 { font-size: 1.4em; }
h3 { font-size: 1.1em; }

dt { font-weight: bold; margin-top: 1em; }
dd { margin-left: 1.5em; }

a.nav {
  text-decoration: none;
}

p:has(> time:first-child:last-child) {
  text-align: right;
}

.theorem {
  border-left: 3px solid #333;
  padding: 0.8em 1em;
  margin: 1.5em 0;
  background: #f8f8f8;
}
.theorem-label {
  font-weight: bold;
  margin-right: 0.3em;
}

.proof { margin: 1.5em 0; }
.proof-label {
  font-style: italic;
  margin-right: 0.3em;
}
.qed {
  float: right;
  margin-top: -1.2em;
}

section {
  background: #efeff2;
  padding: 2em;
  margin: 0 1.5em 1.5em;
  border-radius: 0.5em;
}

ul.toolbar {
  font-family: "DM Sans";
  display: flex;
  flex-direction: row;
  list-style-type: none;
  gap: 0.25em;
  align-items: stretch;
  margin: 2em 0;
  padding: 0;

  > li:has(h2) {
    background: none;
    color: blue;

    & > h2 {
      font-weight: 700;
    }
  }

  > li {
    background: blue;
    color: white;
    padding: 0.5em;
    display: flex;
    align-items: center;
  }

  > li:has([aria-current="page"]) {
    background: #002080;
    /* font-weight: 700; */
  }

  > li * {
    margin: 0;
    line-height: 1;
    color: inherit;
  }

  a {
    text-decoration: none;
  }
}

div.nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

